--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
         "fstream": "^1.0.12",
         "jquery": "^3.4.1",
         "jquery.easing": "^1.4.1",
+        "kind-of": "^6.0.3",
         "tar": "^4.4.8"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.26.10",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "6.0.0",
         "gulp-clean-css": "4.0.0",
